--- a/config.ini
+++ b/config.ini
@@ -32,6 +32,11 @@ python_exec=python
 path=py/d_server.py
 visible=1
 [recommendation]
+batch_size=20
 first_tresh=4
+rand_prob=0.3
+popular_prob=0.5
+neigh_prob=0.2
+n_clusters=100
 
 
